<resources>
    <string name="activateForMorePrefs">Activate for more Preferences</string>
    <string name="adhanVolume">Adhan Volume</string>
    <string name="adjAngle">Angle based (angle/60th of night)</string>
    <string name="adjMidnight">Midnight</string>
    <string name="adjTime">Time based (1/7th of night)</string>
    <string name="afterImsak">After Fajr</string>
    <string name="alternativeOngoing">Alternative Notification Widget</string>
    <string name="angle">Angle</string>
    <string name="angleBased">Angle</string>
    <string name="appName">Prayer Times</string>
    <string name="asr">Asr</string>
    <string name="backup">Backup</string>
    <string name="backupRestore">Backup/Restore</string>
    <string name="beforeSun">Before Sunrise</string>
    <string name="blackWidget">Black Widget</string>
    <string name="calcMethod">Method</string>
    <string name="calendar">Holy Days</string>
    <string name="calendarIntegration">Calendar Integration</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category</string>
    <string name="changelog">What\'s new?</string>
    <string name="cities">Cities</string>
    <string name="compass">Prayer Compass</string>
    <string name="corruptAudio">bad Audio-File</string>
    <string name="customVolume">Choose Volume</string>
    <string name="dateAndTime">Date and Time</string>
    <string name="date">Date</string>
    <string name="dateFormat1">31 December 2013</string>
    <string name="dateFormat2">31 December 13</string>
    <string name="dateFormat">Date Format</string>
    <string name="delConfirmDhikr">Do you really want to delete \“%1$s\”?</string>
    <string name="delConfirm">Do you really want to delete %1$s?</string>
    <string name="delete">Delete</string>
    <string name="dhikrCount">Dhikr aim</string>
    <string name="dhikr">Dhikr</string>
    <string name="distance">Distance</string>
    <string name="djuma">Friday Prayer</string>
    <string name="dlHadith">Download Hadith Database?</string>
    <string name="dlSound">Download “%1$s” (%2$s)?</string>
    <string name="earlyNotification">early Notification</string>
    <string name="earlyText">%2$s minutes to %1$s</string>
    <string name="error">An error occurred</string>
    <string name="imsak">Imsak</string>
    <string name="fajr">Fajr</string>
    <string name="highlatsAdj">High Latitudes Adjustment:</string>
    <string name="fasting">Fast</string>
    <string name="favorite">Favorite</string>
    <string name="filePicker">File Picker</string>
    <string name="fixTimezone">Timezone +/-:</string>
    <string name="foundXHadis">found %1$s Hadith\'s</string>
    <string name="gmonth1">January</string>
    <string name="gmonth2">February</string>
    <string name="gmonth3">March</string>
    <string name="gmonth4">April</string>
    <string name="gmonth5">May</string>
    <string name="gmonth6">June</string>
    <string name="gmonth7">July</string>
    <string name="gmonth8">August</string>
    <string name="gmonth9">September</string>
    <string name="gmonth10">October</string>
    <string name="gmonth11">November</string>
    <string name="gmonth12">December</string>
    <string name="hadith">Sahih al-Bukhary</string>
    <string name="hDateFormat1">30 Muharram 1434</string>
    <string name="hDateFormat2">30 Muharram 34</string>
    <string name="hdateFormat">Hijri Date Format</string>
    <string name="hijriFix">Hijri Date adjustment</string>
    <string name="hmonth1">Muharram</string>
    <string name="hmonth2">Safar</string>
    <string name="hmonth3">Rabi al-awwal</string>
    <string name="hmonth4">Rabi al-achir</string>
    <string name="hmonth5">Jumada al-awwal</string>
    <string name="hmonth6">Jumada l-akhira</string>
    <string name="hmonth7">Rajab</string>
    <string name="hmonth8">Shaban</string>
    <string name="hmonth9">Ramadan</string>
    <string name="hmonth10">Shawwal</string>
    <string name="hmonth11">Dhu l-Qaʿda</string>
    <string name="hmonth12">Dhū l-Hijja</string>
    <string name="holyday1">Islamic New Year</string>
    <string name="holyday2">Ashura</string>
    <string name="holyday3">Mawlid al-Nabi</string>
    <string name="holyday4">Beginning of the three sacred months</string>
    <string name="holyday5">Laylat ul Ragaib</string>
    <string name="holyday6">Laylat ul Isra and Miraj</string>
    <string name="holyday7">Laylat ul Bara’ah</string>
    <string name="holyday8">Ramadan begins</string>
    <string name="holyday9">Laylat al-Qadr</string>
    <string name="holyday10">(Arafat of Eid al-Fitr)</string>
    <string name="holyday11">Eid al-Fitr 1st day</string>
    <string name="holyday12">Eid al-Fitr 2nd day</string>
    <string name="holyday13">Eid al-Fitr 3rd day</string>
    <string name="holyday14">Arafat Day</string>
    <string name="holyday15">Eid al-Adha  1st day</string>
    <string name="holyday16">Eid al-Adha  2nd day</string>
    <string name="holyday17">Eid al-Adha  3rd day</string>
    <string name="holyday18">Eid al-Adha  4th day</string>
    <string name="ishaa">Ishaa</string>
    <string name="juristicHanafi">Hanafi</string>
    <string name="juristicShafi">Shafi (Default)</string>
    <string name="kerahatDuration">Makruh Time - Duration</string>
    <string name="kerahatIstiwa">Istiwa Time (before Zuhr Prayer) </string>
    <string name="kerahatMaghrib">Sunset (before Maghrib Prayer)</string>
    <string name="kerahatSun">Sunrise (after Morning Prayer)</string>
    <string name="kerahatTime">Makruh Praying Time</string>
    <string name="language">Language</string>
    <string name="leftText">%1$s | %3$s to %2$s</string>
    <string name="maghrib">Maghrib</string>
    <string name="missedPrayers">Missed Prayers</string>
    <string name="mixed">Mixed</string>
    <string name="monthly">Month View</string>
    <string name="morningPrayer">Morning Prayer</string>
    <string name="names">99 Names of Allah</string>
    <string name="newAddCity">Use new City Chooser</string>
    <string name="newDhikr">New Dhikr</string>
    <string name="noConnection">No Connection</string>
    <string name="noFavs">No favorites</string>
    <string name="no">No</string>
    <string name="notification">Notification</string>
    <string name="off">Off</string>
    <string name="ok">OK</string>
    <string name="oldAddCity">Use manuel City Chooser</string>
    <string name="ongoingIcon">Notification-Icon</string>
    <string name="ongoingNotification">Notification-Widget</string>
    <string name="other">Other</string>
    <string name="permissionCalendarText">If you want, that the Holy Days appear in your Phone Calendar, you have to allow Calendar Access. Otherwise do not.</string>
    <string name="permissionCalendarTitle">Calendar Berechtigung</string>
    <string name="permissionCameraText">To use 3D-Compass, you need to allow Camera access. Otherwise you will only be able to use the 2D-Compass.</string>
    <string name="permissionCameraTitle">Camera Permission</string>
    <string name="permissionLocationText">Location Permission is needed, to find your City. If you don\'t allow this App, to access your Location, you have to search for your City manually.</string>
    <string name="permissionLocationTitle">Location Permission</string>
    <string name="permissionStorageText">Storage Permission is needed. Without that Permission some things will not work.</string>
    <string name="permissionStorageTitle">Storage Permission</string>
    <string name="prayerNotification">Prayer Notification</string>
    <string name="refresh">Synchronize</string>
    <string name="resetConfirmDhikr">Do you really want to reset\“%1$s\”?</string>
    <string name="restore">Restore</string>
    <string name="search">Search</string>
    <string name="selectOther">Other…</string>
    <string name="mail">E-Mail</string>
    <string name="sendMail">Send E-Mail</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="shareTimes">Today\'s Prayertimes for %1$s</string>
    <string name="showMore">Show more</string>
    <string name="silenterDuration">Silenter duration</string>
    <string name="silenterType">Silent Mode</string>
    <string name="silent">Silent</string>
    <string name="sorted">Sorted</string>
    <string name="soundPicker">Sound Picker</string>
    <string name="sound">Sound</string>
    <string name="sun">Sun</string>
    <string name="switchCompass">Compass/Map</string>
    <string name="tasbih">Tasbih</string>
    <string name="tesbihat">Tasbeehat</string>
    <string name="timeBased">Minutes</string>
    <string name="time">Time</string>
    <string name="touchToSelectCity">Touch here to select City</string>
    <string name="transWhiteWidget">Transparent White Widget</string>
    <string name="transWidget">Transparent Widget</string>
    <string name="test">Try</string>
    <string name="use12h">Use 12 Hours Format</string>
    <string name="useArabicNames">Use Arabic Prayertimes</string>
    <string name="useSilenter">Silent</string>
    <string name="useVibration">Vibration</string>
    <string name="version">Version</string>
    <string name="vibrationDesc">Miliseconds - wait vibrate wait…</string>
    <string name="vibrationPattern">Vibration pattern</string>
    <string name="volumeAlarm">Alarm-Volume</string>
    <string name="volumeMedia">Media-Volume</string>
    <string name="volumeRingtone">Ringtone-Volume</string>
    <string name="vote">Vote</string>
    <string name="whiteWidget">White Widget</string>
    <string name="widgetClock">Prayer Times - 4*2 Clock</string>
    <string name="widgetCountdownType">Widget - Countdown Minutes</string>
    <string name="widgetDesign">Theme</string>
    <string name="widgetLong">Prayer Times - 4*1 Widget</string>
    <string name="widgetLabel">Prayer Times - 2*2 Widget</string>
    <string name="widgetSilenter">Prayer Times - Silenter Widget</string>
    <string name="widgetSmall">Prayer Times - 1*1 Widget</string>
    <string name="witr">Witr</string>
    <string name="yes">Yes</string>
    <string name="zoomIn">Zoom In</string>
    <string name="zoomOut">Zoom out</string>
    <string name="zuhr">Zuhr</string>
    <string name="calculated">Calculated</string>
    <string name="beta_tester">Become a tester</string>
    <string name="widgetClock2">Prayer Times - 2*2 Clock</string>
    <string name="numbers">Digits</string>
    <string name="dateFormat3">31 December </string>
    <string name="hDateFormat3">30 Muharram </string>
    <string name="useAlarm">Use Alarm for Notification</string>
    <string name="useAlarmDesc">EXPERIMENTAL - If Notifications are not triggered in time, you can try this Setting. An
        alarm clock icon will be added to the Status bar!
    </string>
    <string name="ongoingNumber">Show minutes in Notification-Icon</string>
    <string name="vakit_indicator">Prayertime indicator</string>
    <string name="vakit_indicator_next">Next prayertime</string>
    <string name="vakit_indicator_current">Current prayertime</string>
    <string name="show_notification_screen">Show Notification Screen</string>
    <string name="autoremove_notification">Remove Notification after Adhan</string>
    <string name="about">About</string>
    <string name="report_bug">Report bug</string>
    <string name="report_bug_sum">Report bug or request new features.</string>
    <string name="translate">Translate</string>
    <string name="translate_sum">Help us to translate this App in more Languages</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="github_sum">Fork the repo and push changes or submit new issues.</string>
    <string name="license">License</string>
    <string name="license_sum">Check Apache License, Version 2.0 license terms used on Prayer times</string>
    <string name="library_licenses">Library Licenses</string>
    <string name="showIntro">Show Intro</string>
</resources>