<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favswitch"
        android:icon="@drawable/ic_action_switch"
        android:title="@string/favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/fav"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>