<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2013-2017 Metin Kale
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="50dp"
        android:background="#33ffffff"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:src="@drawable/launcher_icon" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:layout_centerHorizontal="true"
            android:text="@string/appName"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appName"
            android:layout_centerHorizontal="true"
            android:text="@string/version"
            android:textColor="#77ffffff" />

        <TextView
            android:id="@+id/developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/version"
            android:layout_centerHorizontal="true"
            android:text="metinkale38"
            android:textColor="#77ffffff" />


        <Button
            android:id="@+id/showIntro"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/developer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:drawablePadding="20dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/showIntro"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/mail"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/showIntro"
            android:layout_centerHorizontal="true"
            android:drawablePadding="20dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/mail"
            android:textColor="#ffffff" />


        <Button
            android:id="@+id/vote"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mail"
            android:layout_centerHorizontal="true"
            android:drawablePadding="20dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/vote"
            android:textColor="#ffffff" />


        <Button
            android:id="@+id/share"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vote"
            android:layout_centerHorizontal="true"
            android:drawablePadding="20dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/share"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/translate"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/share"
            android:layout_centerHorizontal="true"
            android:drawablePadding="20dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/translate"
            android:textColor="#ffffff" />


    </RelativeLayout>
</RelativeLayout>
